feat: add service section

--- a/service.html
+++ b/service.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eco-Print -Service Section</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animate.css" />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -26,26 +27,75 @@
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
           <li><a href="service.html" class="nav-link">Services</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="nav-link"
-              >Services <i class="fas fa-chevron-down"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li><a href="#services">Vertical Farming</a></li>
-              <li><a href="#services">Grow Bags</a></li>
-              <li><a href="#services">Living Walls</a></li>
-            </ul>
-          </li> -->
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <!-- <li><a href="#projects" class="nav-link">Projects</a></li> -->
-          <!-- <li><a href="#donate" class="nav-link">Donate</a></li> -->
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <!-- Navbar End -->
-    <section>
-      <h1>Welcome to Our services</h1>
+    <!-- Service -->
+    <section class="services-section">
+      <h2 class="section-title">Our Services</h2>
+      <div class="services-hero animate fade-in">
+        <img
+          src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/zxqgxhqccjh0jhsjiq6e.jpg"
+          alt="Our Services Hero"
+        />
+      </div>
+
+      <div class="container">
+        <div class="services-grid">
+          <div class="service-card animate fade-in">
+            <h3>Eco-Friendly 3D Filament</h3>
+            <p>
+              We manufacture and sell recycled 3D printing filament in various
+              colors and formats — affordable, sustainable, and ideal for
+              education or prototyping.
+            </p>
+          </div>
+
+          <div class="service-card animate fade-in">
+            <h3>STEM Education Kits</h3>
+            <p>
+              We produce curriculum-aligned 3D models in science, math, and
+              biology — anatomical models, lab equipment, geometric solids, and
+              more — designed for schools in low-resource settings.
+            </p>
+          </div>
+
+          <div class="service-card animate fade-in">
+            <h3>Custom 3D Printing Services</h3>
+            <p>
+              We offer affordable prototyping for innovators, schools, and
+              organizations needing unique, high-quality models.
+            </p>
+          </div>
+
+          <div class="service-card animate fade-in">
+            <h3>Environmental Education Programs</h3>
+            <p>
+              We host beach cleanups, workshops, and youth engagements to build
+              awareness on sustainability, recycling, and innovation.
+            </p>
+          </div>
+
+          <div class="service-card animate fade-in">
+            <h3>Partnerships & Pilots</h3>
+            <p>
+              We collaborate with NGOs, CSR programs, and education initiatives
+              to co-develop impactful sustainability programs and pilots.
+            </p>
+          </div>
+
+          <div class="service-card animate fade-in">
+            <h3>Community Empowerment</h3>
+            <p>
+              We empower youth and women-led groups through training in
+              recycling, digital fabrication, and creative design for social
+              good.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Footer -->
@@ -99,5 +149,6 @@
       </div>
     </footer>
     <script defer src="js/script.js"></script>
+    <script defer src="js/animate.js"></script>
   </body>
 </html>
