--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
               <li><a href="#partners">Our Supporters</a></li>
             </ul>
           </li>
+          <li><a href="service.html" class="nav-link">Services</a></li>
           <!-- <li class="dropdown">
             <a href="#" class="nav-link"
               >Services <i class="fas fa-chevron-down"></i
