fix: cleaning the project files

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       href="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
       fetchpriority="high"
     />
+    <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
@@ -40,35 +41,10 @@
         </button>
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
-          <li class="dropdown">
-            <a href="about.html" class="nav-link"
-              >About<i class="fas fa-chevron-down"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li><a href="#about">Our Story</a></li>
-              <li><a href="#values">Core Values</a></li>
-              <li><a href="#process">Our Process</a></li>
-              <li><a href="#portfolio">Our Impact</a></li>
-              <li><a href="#media">Media(Videos and Articles)</a></li>
-              <li><a href="#team">Our Team</a></li>
-              <li><a href="#awards">Awards & Recognitions</a></li>
-              <li><a href="#partners">Our Supporters</a></li>
-            </ul>
-          </li>
-          <li><a href="service.html" class="nav-link">Services</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="nav-link"
-              >Services <i class="fas fa-chevron-down"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Vertical Farming</a></li>
-              <li><a href="#">Grow Bags</a></li>
-              <li><a href="#">Living Walls</a></li>
-            </ul>
-          </li> -->
+          <li><a href="about.html" class="nav-link active">About</a></li>
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <!-- <li><a href="#" class="nav-link">Projects</a></li>
-          <li><a href="#" class="nav-link">Donate</a></li> -->
+          <li><a href="service.html" class="nav-link">Services</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
@@ -209,7 +185,6 @@
         class="core-values about-us section animate slide-left"
         id="values"
       >
-        <!-- <div class=""> -->
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
@@ -309,10 +284,9 @@
             </div>
           </div>
         </div>
-        <!-- </div> -->
       </section>
 
-      <!-- ===================== PROCESS QUEST ===================== -->
+      <!-- PROCESS QUEST -->
       <section class="process-quest section-pad animate zoom-in" id="process">
         <div class="container">
           <!-- Header -->
@@ -472,318 +446,6 @@
           </div>
         </div>
       </section>
-
-      <!-- // SDG SOLVED -->
-      <section id="portfolio" class="our-portfolio">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Our <em>Impact</em></h2>
-          </div>
-
-          <div class="portfolio-row">
-            <!-- Quality Education (SDG 4) -->
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
-                  alt="Quality Education (SDG 4)"
-                />
-                <div class="hidden-content">
-                  <h4>Quality Education</h4>
-                  <p>
-                    We’ve equipped 10+ public schools with 3D-printed STEM
-                    models, giving 400+ students hands-on science learning they
-                    never had before.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Decent Work & Growth (SDG 8)-->
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
-                  alt="Decent Work & Growth (SDG 8)"
-                />
-                <div class="hidden-content">
-                  <h4>Decent Work & Growth</h4>
-                  <p>
-                    EcoPrint creates green jobs, trains youth in 3D tech, and
-                    empowers waste workers through plastic buy-back and
-                    skill-building opportunities.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Responsible Consumption (SDG 12) -->
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
-                  alt="Responsible Consumption (SDG 12)"
-                />
-                <div class="hidden-content">
-                  <h4>Responsible Consumption</h4>
-                  <p>
-                    We turn waste into useful products through a circular
-                    process from trash to 3D filament to classroom tools all
-                    with zero waste in production.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Climate Action -->
-
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627090/EcoPrintGeneration/img/bprd5dmxthbclhmsri4r.png"
-                  alt="Climate Action (SDG 13)"
-                />
-                <div class="hidden-content">
-                  <h4>Climate Action</h4>
-                  <p>
-                    We have diverted over 17 tonnes of plastic waste from
-                    landfills and burning sites helping reduce emissions and
-                    protect the environment.With a production having zero carbon
-                    emission
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Life Below Water -->
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627103/EcoPrintGeneration/img/dyegnukwzme8axujntqm.png"
-                  alt="Life Below Water (SDG 14)"
-                />
-                <div class="hidden-content">
-                  <h4>Life Below Water</h4>
-                  <p>
-                    By recovering plastic from beaches and coastal communities,
-                    we are protecting marine ecosystems from plastic pollution
-                    before it reaches the ocean.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Life on Land -->
-            <div class="col-lg-3 col-md-6 animate slide-up">
-              <div class="portfolio-item">
-                <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627112/EcoPrintGeneration/img/yqsin8g6zyiahxgy8lkj.png"
-                  alt="Life on Land(SDG 15)"
-                />
-                <div class="hidden-content">
-                  <h4>Life on Land</h4>
-                  <p>
-                    Our clean-up and recycling efforts reduce plastic waste in
-                    informal settlements and landfills helping restore cleaner,
-                    safer communities.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- // Media Videos and Articles Section -->
-      <!-- Videos Section -->
-      <section class="media-section" id="media">
-        <div class="container">
-          <div class="section-header">
-            <h2>Videos</h2>
-            <p>Watch our most featured media interviews and stories.</p>
-          </div>
-
-          <div class="scroll-wrapper animate fade-in">
-            <button class="scroll-btn left" aria-label="Scroll left">
-              &#10094;
-            </button>
-
-            <ul class="scroll-track videos-track">
-              <!-- Example Card 1 -->
-              <!-- <li class="video-card bg-blue">
-                <article>
-                  <div class="image-container">
-                    <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146401/EcoPrintGeneration/img/dlvdjdn3gd1lsvzlw2in.jpg"
-                      alt="NTV Interview"
-                    />
-                    <button class="about-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Video</h4>
-                      <h3>
-                        <a href=""
-                          >Watch how E3D Print Generation is shaping a
-                          sustainable future through 3D printing innovation and
-                          recycling.</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>May 7, 2023</small> | <small>NTV Kenya</small>
-                      </p>
-                    </header>
-                  </div>
-                </article>
-              </li> -->
-            </ul>
-
-            <button class="scroll-btn right">&#10095;</button>
-          </div>
-        </div>
-      </section>
-
-      <!-- Articles Section -->
-      <section class="media-section" id="media">
-        <div class="container">
-          <div class="section-header">
-            <header class="tms-head">
-            <div class="tms-quote-badge" aria-hidden="true">“</div>
-            <h2 class="tms-title">Articles</h2>
-            <p class="tms-sub">Read our latest stories and press features.</p>
-          </header>
-            <!-- <h2>Articles</h2>
-            <p>Read our latest stories and press features.</p> -->
-          </div>
-
-          <div class="scroll-wrapper">
-            <button
-              class="scroll-btn left"
-              aria-label="Scroll left animate fade-in"
-            >
-              &#10094;
-            </button>
-
-            <ul class="scroll-track articles-track">
-              <!-- <li class="bg-blue">
-                <article>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Article</h4>
-                      <h3>
-                        <a href=""
-                          >Shaping the Future of 3D Printing with Recycled
-                          Materials</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Jan 7, 2020</small> |
-                        <small>Daily Nation</small> |
-                        <small>By Margaret Maina</small>
-                      </p>
-                    </header>
-                    <main>
-                      <p>
-                        E3D Print Generation is a sustainable 3D printing
-                        company focused on converting recycled materials into
-                        useful, eco-friendly products. The firm combines
-                        creativity and innovation to offer cost-effective
-                        small-scale manufacturing, prototyping, and educational
-                        programs. Its mission is to promote environmental
-                        sustainability through technology by reducing plastic
-                        waste and empowering communities to create value from
-                        recycled materials.
-                      </p>
-                    </main>
-                  </div>
-                </article>
-              </li> -->
-            </ul>
-
-            <button class="scroll-btn right">&#10095;</button>
-          </div>
-        </div>
-      </section>
-      <!-- 
-      <section class="our-team animate slide-left" id="team">
-        <div class="responsive-container-block outer-container">
-          <div class="responsive-container-block inner-container">
-            <p class="text-blk section-head-text">Meet Our Team</p>
-            <div class="responsive-container-block">
-              <div class="responsive-cell-block team-card-container">
-                <div class="team-card">
-                  <div class="img-wrapper">
-                    <img
-                      class="team-img"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146400/EcoPrintGeneration/img/xz55ngsdoxzjld3uqlqv.jpg"
-                      alt="team 1"
-                    />
-                  </div>
-                  <p class="text-blk name">Gabriel Mwaingo</p>
-                  <p class="text-blk position">CEO</p>
-                </div>
-              </div>
-              <div class="responsive-cell-block team-card-container">
-                <div class="team-card">
-                  <div class="img-wrapper">
-                    <img
-                      class="team-img"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
-                      alt="team 2"
-                    />
-                  </div>
-                  <p class="text-blk name">Shamayel Karani</p>
-                  <p class="text-blk position">COO</p>
-                </div>
-              </div>
-              <div class="responsive-cell-block team-card-container">
-                <div class="team-card">
-                  <div class="img-wrapper">
-                    <img
-                      class="team-img"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
-                      alt="team 3"
-                    />
-                  </div>
-                  <p class="text-blk name">Dafford Owino</p>
-                  <p class="text-blk position">CMO</p>
-                </div>
-              </div>
-              <div class="responsive-cell-block team-card-container">
-                <div class="team-card">
-                  <div class="img-wrapper">
-                    <img
-                      class="team-img"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/rn8r2v4i5ygdhrchbnsf.jpg"
-                      alt="team 4"
-                    />
-                  </div>
-                  <p class="text-blk name">Eco Print</p>
-                  <p class="text-blk position">Member</p>
-                </div>
-              </div>
-              <div class="responsive-cell-block team-card-container">
-                <div class="team-card">
-                  <div class="img-wrapper">
-                    <img
-                      class="team-img"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
-                      alt="team 5"
-                    />
-                  </div>
-                  <p class="text-blk name">Eco Print</p>
-                  <p class="text-blk position">Instructor</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
       <!-- Team -->
       <section class="team tms-section animate slide-up" id="testimonials">
         <div class="tms-container">
@@ -989,8 +651,8 @@
           <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="portfolio.html">Our Portfolio</a></li>
           </ul>
         </div>
 
