--- a/contact.html
+++ b/contact.html
@@ -29,25 +29,13 @@
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
-          <li><a href="service.html" class="nav-link">Services</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="nav-link"
-              >Services <i class="fas fa-chevron-down"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Vertical Farming</a></li>
-              <li><a href="#">Grow Bags</a></li>
-              <li><a href="#">Living Walls</a></li>
-            </ul>
-          </li> -->
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <!-- <li><a href="#" class="nav-link">Projects</a></li>
-          <li><a href="#" class="nav-link">Donate</a></li> -->
+          <li><a href="service.html" class="nav-link">Services</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <!-- Navbar End -->
     <section class="contact-page">
       <!-- Hero -->
       <div class="contact-hero">
@@ -150,10 +138,10 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="about.html">About</a></li>
+           <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="portfolio.html">Our Portfolio</a></li>
           </ul>
         </div>
 
