--- a/service.html
+++ b/service.html
@@ -26,8 +26,9 @@
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
-          <li><a href="service.html" class="nav-link">Services</a></li>
           <li><a href="shop.html" class="nav-link">Shop</a></li>
+          <li><a href="service.html" class="nav-link">Services</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
@@ -118,10 +119,10 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="about.html">About</a></li>
+             <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="portfolio.html">Our Portfolio</a></li>
           </ul>
         </div>
 
