--- a/shop.html
+++ b/shop.html
@@ -29,20 +29,9 @@
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
-          <li><a href="service.html" class="nav-link">Services</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="nav-link"
-              >Services <i class="fas fa-chevron-down"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Vertical Farming</a></li>
-              <li><a href="#">Grow Bags</a></li>
-              <li><a href="#">Living Walls</a></li>
-            </ul>
-          </li> -->
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <!-- <li><a href="#" class="nav-link">Projects</a></li>
-          <li><a href="#" class="nav-link">Donate</a></li> -->
+          <li><a href="service.html" class="nav-link">Services</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
@@ -655,19 +644,10 @@
               <!-- Testimonial 1 -->
               <li class="tms-slide">
                 <figure class="tms-card">
-                  <div class="tms-top">
-                    <!-- <img
-                      class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=12"
-                      alt="Photo of Amina K."
-                    /> -->
-                    <div>
+                  <div class="tms-top">                    <div>
                       <h3 class="tms-name">Amina K.</h3>
                       <p class="tms-role">STEM Teacher • Nairobi</p>
                     </div>
-                    <!-- <div class="tms-stars" aria-label="5 out of 5 stars">
-                      ★★★★★
-                    </div> -->
                   </div>
                   <blockquote class="tms-quote">
                     EcoPrint’s models turned theory into touch. My students
@@ -683,18 +663,10 @@
               <li class="tms-slide">
                 <figure class="tms-card">
                   <div class="tms-top">
-                    <!-- <img
-                      class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=32"
-                      alt="Photo of Brian M."
-                    /> -->
                     <div>
                       <h3 class="tms-name">Brian M.</h3>
                       <p class="tms-role">Makerspace Lead • Mombasa</p>
                     </div>
-                    <!-- <div class="tms-stars" aria-label="5 out of 5 stars">
-                      ★★★★★
-                    </div> -->
                   </div>
                   <blockquote class="tms-quote">
                     The filament quality surprised us—consistent diameter,
@@ -710,18 +682,10 @@
               <li class="tms-slide">
                 <figure class="tms-card">
                   <div class="tms-top">
-                    <!-- <img
-                      class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=5"
-                      alt="Photo of Ruth N."
-                    /> -->
                     <div>
                       <h3 class="tms-name">Ruth N.</h3>
                       <p class="tms-role">School Administrator • Kisumu</p>
                     </div>
-                    <!-- <div class="tms-stars" aria-label="4.5 out of 5 stars">
-                      ★★★★☆
-                    </div> -->
                   </div>
                   <blockquote class="tms-quote">
                     Ordering was easy, delivery was fast, and support was real.
@@ -737,18 +701,10 @@
               <li class="tms-slide">
                 <figure class="tms-card">
                   <div class="tms-top">
-                    <!-- <img
-                      class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=67"
-                      alt="Photo of David O."
-                    /> -->
                     <div>
                       <h3 class="tms-name">David O.</h3>
                       <p class="tms-role">Parent • Thika</p>
                     </div>
-                    <!-- <div class="tms-stars" aria-label="5 out of 5 stars">
-                      ★★★★★
-                    </div> -->
                   </div>
                   <blockquote class="tms-quote">
                     My daughter prints at home now. She’s obsessed—and learning
@@ -817,10 +773,10 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="about.html">About</a></li>
+             <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="portfolio.html">Our Portfolio</a></li>
           </ul>
         </div>
 
