fix: rename sdg solved css classes

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,21 +88,21 @@
     </section>
 
     <!-- // SDG SOLVED -->
-    <section id="portfolio" class="our-portfolio">
+    <section id="portfolio" class="sdg-solved">
       <div class="container">
         <div class="section-heading">
           <h2>Our <em>Impact</em></h2>
         </div>
 
-        <div class="portfolio-row">
+        <div class="sdg-container">
           <!-- Quality Education (SDG 4) -->
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
                 alt="Quality Education (SDG 4)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Quality Education</h4>
                 <p>
                   We’ve equipped 10+ public schools with 3D-printed STEM models,
@@ -114,13 +114,13 @@
           </div>
 
           <!-- Decent Work & Growth (SDG 8)-->
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
                 alt="Decent Work & Growth (SDG 8)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Decent Work & Growth</h4>
                 <p>
                   EcoPrint creates green jobs, trains youth in 3D tech, and
@@ -132,13 +132,13 @@
           </div>
 
           <!-- Responsible Consumption (SDG 12) -->
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
                 alt="Responsible Consumption (SDG 12)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Responsible Consumption</h4>
                 <p>
                   We turn waste into useful products through a circular process
@@ -151,13 +151,13 @@
 
           <!-- Climate Action -->
 
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627090/EcoPrintGeneration/img/bprd5dmxthbclhmsri4r.png"
                 alt="Climate Action (SDG 13)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Climate Action</h4>
                 <p>
                   We have diverted over 17 tonnes of plastic waste from
@@ -170,13 +170,13 @@
           </div>
 
           <!-- Life Below Water -->
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627103/EcoPrintGeneration/img/dyegnukwzme8axujntqm.png"
                 alt="Life Below Water (SDG 14)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Life Below Water</h4>
                 <p>
                   By recovering plastic from beaches and coastal communities, we
@@ -188,13 +188,13 @@
           </div>
 
           <!-- Life on Land -->
-          <div class="col-lg-3 col-md-6 animate slide-up">
-            <div class="portfolio-item">
+          <div class="sdg-card animate slide-up">
+            <div class="the-sdg">
               <img
                 src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627112/EcoPrintGeneration/img/yqsin8g6zyiahxgy8lkj.png"
                 alt="Life on Land(SDG 15)"
               />
-              <div class="hidden-content">
+              <div class="sdg-details">
                 <h4>Life on Land</h4>
                 <p>
                   Our clean-up and recycling efforts reduce plastic waste in
