feat: adjust the team profile image

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -463,8 +463,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=12"
-                      alt="Photo of Amina K."
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/euwkaeruh1smakdjefgf.jpg"
+                      alt="Photo of Gabriel Mwaingo"
                     />
                     <div>
                       <h3 class="tms-name">Gabriel Mwaingo</h3>
@@ -484,8 +484,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=32"
-                      alt="Photo of Brian M."
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/jzf69hpx8vlp9kdbewjg.jpg"
+                      alt="Photo of Shamayel Karani"
                     />
                     <div>
                       <h3 class="tms-name">Shamayel Karani</h3>
@@ -505,8 +505,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=5"
-                      alt="Photo of Ruth N."
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/fogfv1omc7dckgrh9c9t.jpg"
+                      alt="Photo of Dafford Owino"
                     />
                     <div>
                       <h3 class="tms-name">Dafford Owino</h3>
@@ -525,11 +525,11 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=67"
-                      alt="Photo of David O."
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/uhzetwlc9wztt7ukn382.jpg"
+                      alt="Photo of Josphine Ocholla"
                     />
                     <div>
-                      <h3 class="tms-name">Josphine Ochola</h3>
+                      <h3 class="tms-name">Josphine Ocholla</h3>
                       <p class="tms-role">EcoPrint CFO</p>
                     </div>
                   </div>
@@ -546,8 +546,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://i.pravatar.cc/120?img=67"
-                      alt="Photo of David O."
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/ytpve1jpqvcygaxztszs.jpg"
+                      alt="Photo of Deogratias Taka"
                     />
                     <div>
                       <h3 class="tms-name">Deogratias Taka</h3>
