adjust team quote

--- a/about.html
+++ b/about.html
@@ -472,8 +472,7 @@
                     </div>
                   </div>
                   <blockquote class="tms-quote">
-                    Scaling our conversion of plastic waste into high-quality 3D
-                    filament and STEM models.With a background in BBIT
+                    Sustainable materials for the next generation of makers.
                   </blockquote>
                 </figure>
               </li>
@@ -493,8 +492,7 @@
                     </div>
                   </div>
                   <blockquote class="tms-quote">
-                    With a background in computer science and Project management
-                    and an experience of over 5 years in Running a Startups
+                    Turning ideas into scalable, well-executed products.
                   </blockquote>
                 </figure>
               </li>
@@ -533,10 +531,7 @@
                       <p class="tms-role">EcoPrint CFO</p>
                     </div>
                   </div>
-                  <blockquote class="tms-quote">
-                    Has over 3 years’ experience in finance and portfolio
-                    management.
-                  </blockquote>
+                  <blockquote class="tms-quote">Strategic finance and portfolio management expertise</blockquote>
                 </figure>
               </li>
 
